--- a/Juppin_Anthony_test_javascript_algo_main.html
+++ b/Juppin_Anthony_test_javascript_algo_main.html
@@ -3,10 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <title>Document</title>
   </head>
   <body>
+    <h2>Sudoku</h2>
+    <br />
     <table id="sudoku"></table>
+    <br />
+    <br />
+    <table id="tableErreur" class="table table-striped"></table>
+
     <script language="Javascript" src="Javascript_test_je1.js"></script>
     <script
       language="Javascript"
